
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
typedef int fd_set ;
typedef int buf ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int printf (char*,char*) ;
 int recv (int,char*,int,int ) ;
 scalar_t__ select (int *,int *,int *,int *,struct timeval*) ;

char *fzz_recv (int sock)
{
 fd_set fds;
 struct timeval tv;
 static char buf[10000];
 char *ptr=buf;
 int n;
 tv.tv_sec = 5;
 tv.tv_usec = 0;

 FD_ZERO(&fds);
 FD_SET(sock,&fds);
 if (select(((void*)0),&fds,((void*)0),((void*)0),&tv) != 0) {
  if (FD_ISSET (sock,&fds)) n=recv (sock,ptr,sizeof(buf),0);
  buf[n-1] = '\0';
  printf ("RECV: %s\n",buf);
  return buf;
 }
 else {
  return ((void*)0);
 }

}
