; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_1028.c_fzz_recv.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_1028.c_fzz_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i64 }

@fzz_recv.buf = internal global [10000 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [10 x i8] c"RECV: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fzz_recv(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.timeval, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* getelementptr inbounds ([10000 x i8], [10000 x i8]* @fzz_recv.buf, i64 0, i64 0), i8** %6, align 8
  %8 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 0
  store i32 5, i32* %8, align 8
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 1
  store i64 0, i64* %9, align 8
  %10 = call i32 @FD_ZERO(i32* %4)
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @FD_SET(i32 %11, i32* %4)
  %13 = call i64 @select(i32* null, i32* %4, i32* null, i32* null, %struct.timeval* %5)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %29

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = call i64 @FD_ISSET(i32 %16, i32* %4)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i32, i32* %3, align 4
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @recv(i32 %20, i8* %21, i32 10000, i32 0)
  store i32 %22, i32* %7, align 4
  br label %23

23:                                               ; preds = %19, %15
  %24 = load i32, i32* %7, align 4
  %25 = sub nsw i32 %24, 1
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds [10000 x i8], [10000 x i8]* @fzz_recv.buf, i64 0, i64 %26
  store i8 0, i8* %27, align 1
  %28 = call i32 @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([10000 x i8], [10000 x i8]* @fzz_recv.buf, i64 0, i64 0))
  store i8* getelementptr inbounds ([10000 x i8], [10000 x i8]* @fzz_recv.buf, i64 0, i64 0), i8** %2, align 8
  br label %30

29:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %30

30:                                               ; preds = %29, %23
  %31 = load i8*, i8** %2, align 8
  ret i8* %31
}

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i64 @select(i32*, i32*, i32*, i32*, %struct.timeval*) #1

declare dso_local i64 @FD_ISSET(i32, i32*) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
